--- a/src/styles/resume_styles.css
+++ b/src/styles/resume_styles.css
@@ -3,7 +3,7 @@
 /* Stylesheet for Online Resume mp-1. */
 
 * {
-    background-color: #f1f1f1;
+    background-color: #f3f3f3;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -26,14 +26,19 @@ nav{
 
 nav a{
     text-decoration: none;
+    background-color: transparent;
 }
 
 nav li{
     display: block;
     padding: 10px;
     margin-bottom: 10px;
-    border: 1px solid lightgray;
+    border: 1px solid #07e191;
 
+}
+
+nav li:hover{
+    background-color: white;
 }
 
 header{
@@ -41,7 +46,7 @@ header{
     margin: 30px;
     width: 100%;
     text-align: left;
-    border-bottom: 2px solid lightgray;
+    border-bottom: 2px solid #07e191;
 }
 
 main{
@@ -58,12 +63,39 @@ footer{
     border-top: 2px solid lightgray;
 }
 
-h1,h2,h3,h4,h5, p{
+h1, h2, h3, h4, h5, p{
     margin: 10px;
 }
 
 img{
-    max-width: 80%;
+    width: 560px;
+}
+
+.portfolio{
+    display: block;
+}
+
+.calc_buttons li{
+    display: inline;
+    padding: 5px;
+}
+
+button {
+    background-color: #07e191; /* Green */
+    border: none;
+    border-radius: 5px;
+    padding: 8px 16px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+sup {
+    background-color: transparent;
+}
+
+strong {
+    color: #00c880;
 }
 
 @media screen and (max-width: 1000px){
@@ -85,7 +117,7 @@ img{
         text-align: center;
         max-width: 100%;
         padding: 15px 0;
-        border-bottom: 2px solid lightgray;
+        border-bottom: 2px solid #07e191;
     }
 
     nav li{
@@ -95,7 +127,7 @@ img{
     header{
         text-align: center;
         margin: 10px auto;
-        border: 2px solid lightgray;
+        border: 2px solid #07e191;
     }
 
 }
